BoundBox/Dimensions of curve not showing correct values #90808

Closed
opened 2021-08-20 17:24:25 +02:00 by Germano Cavalcante · 14 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.14760 Core Profile Context 20.45.37.01 27.20.14537.1001

Blender Version
Apply Scale issue:
Broken: version: 3.0.0
Caused by b9febb54a4

Undo selection issue:
Broken: version: 2.83.13, branch: master, commit date: 2021-03-09 07:21, hash: bb50046730
Worked: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: 06312c6d2d

Short description of error
Ref #90736 (Curve: Apply Scale Problems with Dimensions & Shape)
When applying scale or selecting a curve and undoing it, the bound box has wrong dimensions.

Exact steps for others to reproduce the error


Another file to test (from #91983):

dimensions.mp4

dimensions.blend

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.14760 Core Profile Context 20.45.37.01 27.20.14537.1001 **Blender Version** **Apply Scale issue:** Broken: version: 3.0.0 Caused by b9febb54a4 **Undo selection issue:** Broken: version: 2.83.13, branch: master, commit date: 2021-03-09 07:21, hash: `bb50046730` Worked: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: `06312c6d2d` **Short description of error** Ref #90736 (Curve: Apply Scale Problems with Dimensions & Shape) When applying scale or selecting a curve and undoing it, the bound box has wrong dimensions. **Exact steps for others to reproduce the error** - open attached file - select curve object - Undo selection [undo_curve_selection_bug.blend](https://archive.blender.org/developer/F10296109/undo_curve_selection_bug.blend) --- Another file to test (from #91983): [dimensions.mp4](https://archive.blender.org/developer/F10808782/dimensions.mp4) [dimensions.blend](https://archive.blender.org/developer/F10808787/dimensions.blend)
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii

#92500 was marked as duplicate of this issue

#92500 was marked as duplicate of this issue

#91983 was marked as duplicate of this issue

#91983 was marked as duplicate of this issue
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @orbisvicis

Added subscriber: @orbisvicis
Author
Member

I believe this problem needs special attention.
For optimization, the snap system relies heavily on the BoundBox of objects.
They are used for earlier return avoiding heavy calculations and BVH creation.
But Curves often don't have the BoundBox corresponding to the visualized object.
And with b9febb54a4, it is now much more common for Curves to have a bonded evaluated Mesh.

I believe this problem needs special attention. For optimization, the snap system relies heavily on the BoundBox of objects. They are used for earlier return avoiding heavy calculations and BVH creation. But Curves often don't have the BoundBox corresponding to the visualized object. And with b9febb54a4, it is now much more common for Curves to have a bonded evaluated Mesh.
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

I think the snapping system should ignore any data calculated from the DispList on an evaluated curve object now.
Any curve object with a surface will evaluate to a mesh, so the mesh can be used instead.
Snapping to wire curves directly should use the CurveEval data.

I think the snapping system should ignore any data calculated from the `DispList` on an evaluated curve object now. Any curve object with a surface will evaluate to a mesh, so the mesh can be used instead. Snapping to wire curves directly should use the `CurveEval` data.
Germano Cavalcante changed title from Undo curve selection recalculates boundbox based on curve data to BoundBox/Dimensions of curve not showing correct values 2021-10-06 15:40:55 +02:00
Author
Member

Added subscribers: @ditos, @PratikPB2123

Added subscribers: @ditos, @PratikPB2123
Author
Member

#91983 (Blender 3.0: Apply Scale does not work properly on Curves.) revealed this to be a regression.

#91983 (Blender 3.0: Apply Scale does not work properly on Curves.) revealed this to be a regression.
Author
Member

Added subscriber: @IPv6

Added subscriber: @IPv6
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58

This issue was referenced by 752c6d668b

This issue was referenced by 752c6d668bcb9a6b357734f7e124a6b605ac9d9b
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-11-24 18:53:05 +01:00
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:59:05 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90808
No description provided.